--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/media-query.css">
 
     <title>Frontend Mentor | Social proof section</title>
   </head>
@@ -29,7 +30,6 @@
         See what our satisfied customers are saying about our services.</p>
     </header>
     
-    <main class="container">
       <section class="container__star">
         <div class="reviews">
           <ul>
@@ -66,7 +66,7 @@
       </section>
 
       <section class="container__comment">
-        <div class="box">
+        <div class="box box__1">
           <div class="item">
             <img src="./src/images/image-colton.jpg" alt="Colton Smith">
             <p class="box__nome">Colton Smith <span>Verified Buyer</span></p>
@@ -77,7 +77,7 @@
             Excellent!"</p>
         </div>
 
-        <div class="box">
+        <div class="box box__2">
           <div class="item">
             <img src="./src/images/image-irene.jpg" alt="Irene Roberts ">
             <p class="box__nome">Irene Roberts <span>Verified Buyer</span></p>
@@ -87,7 +87,7 @@
             delighted with the simplicity of the purchase and the speed of delivery."</p>
         </div>
 
-        <div class="box">
+        <div class="box box__3">
           <div class="item">
             <img src="./src/images/image-anne.jpg" alt="Anne Wallace">
             <p class="box__nome">Anne Wallace <span>Verified Buyer</span></p>
@@ -97,7 +97,6 @@
             standard. Will definitely use them again and recommend them to everyone!"</p>
         </div>
       </section>
-    </main>
 
     <footer class="attribution">
       Challenge by
