--- a/index.html
+++ b/index.html
@@ -24,86 +24,79 @@
   </head>
 
   <body>
-    <header class="cabecalho">
-      <h1>10,000+ of our users love our products.</h1>
-      <p>We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.</p>
-    </header>
-    
-      <section class="container__star">
-        <div class="reviews">
-          <ul>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-          </ul>
-          <p class="star__texto">Rated 5 Stars in Reviews</p>
-        </div>
-
-        <div class="report">
-          <ul>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-          </ul>
-          <p class="star__texto">Rated 5 Stars in Report Guru</p>
-        </div>
-
-        <div class="tech">
-          <ul>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-            <li><i class="fas fa-star"></i></li>
-          </ul>
-          <p class="star__texto">Rated 5 Stars in BestTech</p>
-        </div>
+    <main class="container">
+      <section class="cabecalho">
+        <h1>10,000+ of our users love our products.</h1>
+        <p>We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.</p>
       </section>
-
-      <section class="container__comment">
-        <div class="box box__1">
-          <div class="item">
-            <img src="./src/images/image-colton.jpg" alt="Colton Smith">
-            <p class="box__nome">Colton Smith <span>Verified Buyer</span></p>
+      
+        <section class="container__star">
+          <div class="reviews">
+            <ul>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+            </ul>
+            <p class="star__texto">Rated 5 Stars in Reviews</p>
           </div>
-
-          <p class="box__comment">"We needed the same printed design as the one we had ordered a week prior.
-            Not only did they find the original order, but we also received it in time.
-            Excellent!"</p>
-        </div>
-
-        <div class="box box__2">
-          <div class="item">
-            <img src="./src/images/image-irene.jpg" alt="Irene Roberts ">
-            <p class="box__nome">Irene Roberts <span>Verified Buyer</span></p>
+          <div class="report">
+            <ul>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+            </ul>
+            <p class="star__texto">Rated 5 Stars in Report Guru</p>
           </div>
-
-          <p class="box__comment">"Customer service is always excellent and very quick turn around. Completely
-            delighted with the simplicity of the purchase and the speed of delivery."</p>
-        </div>
-
-        <div class="box box__3">
-          <div class="item">
-            <img src="./src/images/image-anne.jpg" alt="Anne Wallace">
-            <p class="box__nome">Anne Wallace <span>Verified Buyer</span></p>
+          <div class="tech">
+            <ul>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+            </ul>
+            <p class="star__texto">Rated 5 Stars in BestTech</p>
           </div>
-
-          <p class="box__comment">"Put an order with this company and can only praise them for the very high
-            standard. Will definitely use them again and recommend them to everyone!"</p>
-        </div>
-      </section>
-
-    <footer class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://www.linkedin.com/in/rodrigo-faria-000790263/" target="_blank">Rodrigo Faria</a>.
-    </footer>
+        </section>
+        <section class="container__comment">
+          <div class="box box__1">
+            <div class="item">
+              <img src="./src/images/image-colton.jpg" alt="Colton Smith">
+              <p class="box__nome">Colton Smith <span>Verified Buyer</span></p>
+            </div>
+            <p class="box__comment">"We needed the same printed design as the one we had ordered a week prior.
+              Not only did they find the original order, but we also received it in time.
+              Excellent!"</p>
+          </div>
+          <div class="box box__2">
+            <div class="item">
+              <img src="./src/images/image-irene.jpg" alt="Irene Roberts ">
+              <p class="box__nome">Irene Roberts <span>Verified Buyer</span></p>
+            </div>
+            <p class="box__comment">"Customer service is always excellent and very quick turn around. Completely
+              delighted with the simplicity of the purchase and the speed of delivery."</p>
+          </div>
+          <div class="box box__3">
+            <div class="item">
+              <img src="./src/images/image-anne.jpg" alt="Anne Wallace">
+              <p class="box__nome">Anne Wallace <span>Verified Buyer</span></p>
+            </div>
+            <p class="box__comment">"Put an order with this company and can only praise them for the very high
+              standard. Will definitely use them again and recommend them to everyone!"</p>
+          </div>
+        </section>
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://www.linkedin.com/in/rodrigo-faria-000790263/" target="_blank">Rodrigo Faria</a>.
+      </footer>
+    </main>
 
     <!--font-awesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
